# sqlx-newtype

./: .gitignore  Cargo.toml  devenv.nix
migrations/: 20200718111257_timestamps.sql
src/: main.rs
