[package]
name = "rust-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
sqlx = { version = "0.8.0", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
tokio = {version = "1.39.2", features = ["rt", "macros"]}
